--- a/src/app/create-story/create-story.component.html
+++ b/src/app/create-story/create-story.component.html
@@ -11,7 +11,7 @@
 &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
 
   <label class="sr-only" for="inlineFormInputName2">Name</label>
-  <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Story/PBI Name" style="width: 1100px">
+  <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Story/PBI Name" style="width: 1100px" [(ngModel)]="storyname">
 <br><br><br><br>
 &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
 <button type="submit" class="btn btn-primary mb-2"> <i class='fa fa-home' [routerLink]="['/home']"></i>  Home Page</button>
@@ -22,7 +22,7 @@
 &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
 &nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
 <!-- <div class="text-right">-->
-  <button type="submit" class="btn btn-primary mb-2"><i class='fa fa-plus-square' [routerLink]="['/estimateStory',username]"></i>  Create Story</button>
+  <button type="submit" class="btn btn-primary mb-2"><i class='fa fa-plus-square' [routerLink]="['/estimateStory']" [queryParams]="{ userName: username ,storyname:storyname}"></i>  Create Story</button>
 <!-- </div>-->
 </form>
 </body>
